не работает метод добавления ad